@@ -121,6 +121,9 @@ function userRequestHandler(req,userRes){
 
         options = userRule.replaceRequestOption(req,options) || options;
         options.rejectUnauthorized = false;
+        try{
+            delete options.headers['accept-encoding']; //avoid gzipped response
+        }catch(e){}
 
         //update quest data
         reqData = userRule.replaceRequestData(req,reqData) || reqData;
@@ -138,8 +141,11 @@ function userRequestHandler(req,userRes){
             resHeader = util.lower_keys(resHeader);
 
             // remove gzip related header, and ungzip the content
+            // note there are other compression types like deflate
             var ifServerGzipped =  /gzip/i.test(resHeader['content-encoding']);
-            delete resHeader['content-encoding'];
+            if(ifServerGzipped){
+                delete resHeader['content-encoding'];
+            }
             delete resHeader['content-length'];
 
             userRes.writeHead(statusCode, resHeader);
